# a3data

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  deployment.yaml  docker-compose.yml  pyproject.toml  service.yaml
app/: backend_pre_start.py  initial_data.py  main.py
app/alembic/: env.py
app/alembic/versions/: 266859330ee3_initial_migration.py
app/api/: deps.py  main.py
app/api/controllers/: patient_controller.py  user_controller.py
app/api/presenters/: authenticate_user_presenter.py  create_patient_presenter.py  create_user_presenter.py  delete_patient_presenter.py  delete_user_presenter.py  get_patient_presenter.py  get_user_presenter.py  update_patient_presenter.py  update_user_presenter.py
app/api/routes/: login.py  patients.py  users.py
app/domain/: value_objects.py
app/domain/entities/: patient.py  user.py
app/infra/: config.py  db_import.py
app/infra/db_models/: db_base.py  patient_db_model.py  user_db_model.py
app/infra/loggers/: logger_config.py
app/infra/repositories/: patient_repository.py  user_repository.py
app/infra/security/: security.py
app/interactor/dtos/: authenticate_user_dtos.py  create_patient_dtos.py  create_user_dtos.py  delete_patient_dtos.py  delete_user_dtos.py  get_patient_dtos.py  get_user_dtos.py  update_patient_dtos.py  update_user_dtos.py
app/interactor/interfaces/presenters/: authenticate_user_presenter.py  create_patient_presenter.py  create_user_presenter.py  delete_patient_presenter.py  delete_user_presenter.py  (+4 more)
app/interactor/use_cases/: authenticate_user.py  create_patient.py  create_user.py  delete_patient.py  delete_user.py  get_patient.py  get_user_by_email.py  get_user_by_id.py  update_patient.py  update_user.py
app/tests/: conftest.py
app/tests/repositories/: test_patient_repository.py
app/tests/utils/: user.py  utils.py
csv/: patients.csv
(+2 files in other folders)
